--- a/packages/yelp_scrapper/package.json
+++ b/packages/yelp_scrapper/package.json
@@ -1,8 +1,10 @@
 {
   "name": "yelp_scrapper",
   "version": "1.0.0",
-  "main": "handler.js",
+  "main": "dist/handler.js",
   "scripts": {
+    "build": "tsc -b",
+    "deploy": "npm run build && sls deploy",
     "swarm": "node swarm.js"
   },
   "author": "",
@@ -15,7 +17,10 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "serverless-jetpack": "^0.8.1",
     "serverless-offline": "^5.12.1",
-    "serverless-offline-scheduler": "^0.4.0"
+    "serverless-offline-scheduler": "^0.4.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.7.5"
   }
 }
