--- a/packages/graphql-yoga-lambda-typescript/package.json
+++ b/packages/graphql-yoga-lambda-typescript/package.json
@@ -10,7 +10,8 @@
     "@types/node": "^13.7.1",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-typescript": "^1.1.9",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yelp_scrapper": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
