--- a/packages/yelp_scrapper/serverless.yml
+++ b/packages/yelp_scrapper/serverless.yml
@@ -1,29 +1,36 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: yelp-scrapper
 
+package:
+  # Pack each function individually
+  individually: true
+  # At first serverless will apply the globs defined in exclude. After that it'll add all the globs from include.
+  exclude:
+    - ./**
+    - '!package.json'
+    # - '!dist/**'
+    - '!node_modules/**'
+  # You can always re-include previously excluded files and directories.  
+  include:
+    # General
+    - "!{../../,}{**/,}.DS_Store"
+    - "!{../,}{**/,}.vscode/**"
+    # Dependencies
+    - "!{../../,}{**/,}node_modules/aws-sdk/**"
+    - "!{../../,}{**/,}node_modules/{@*/*,*}/CHANGELOG.md"
+    - "!{../../,}{**/,}node_modules/{@*/*,*}/README.md"
+
 plugins:
+  - serverless-jetpack
+  - serverless-plugin-typescript
   - serverless-offline
   - serverless-offline-scheduler
 
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+custom:
+  jetpack:
+    base: "../.." # Search for hoisted dependencies to one parent above normal.
+  projectName: serverless_projects # Project name under the services will be defined in
+  stage: ${{opt:stage, self:provider.stage}}
+  region: ${{opt:region, self:provider.region}}
 
 provider:
   name: aws
@@ -52,10 +59,12 @@ provider:
       - utils/**
 
 functions:
+  hello:
+    handler: dist/handler.hello
   scrape:
-    handler: handler.scrape
+    handler: dist/handler.scrape
   launch_scrappers:
-    handler: handler.launch_scrappers
+    handler: dist/handler.launch_scrappers
     events:
       - schedule: rate(1 minute)
 #    The following are a few example events you can configure
