--- a/packages/express-serverless/package.json
+++ b/packages/express-serverless/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "yelp_scrapper",
+  "name": "express-serverless",
   "version": "1.0.0",
-  "main": "dist/handler.js",
+  "description": "",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
+    "watch": "tsc -b -w",
     "deploy": "npm run build && sls deploy",
-    "swarm": "node swarm.js"
+    "start": "sls offline start",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.619.0",
-    "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "uuid": "^3.4.0"
+    "express": "^4.17.1",
+    "serverless-http": "^2.3.1"
   },
   "devDependencies": {
     "serverless-jetpack": "^0.8.1",
     "serverless-offline": "^5.12.1",
-    "serverless-offline-scheduler": "^0.4.0",
     "typescript": "^3.7.5"
   }
 }
