--- a/packages/projects/package.json
+++ b/packages/projects/package.json
@@ -10,12 +10,13 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "yelp_scrapper": "^1.0.0"
+  },
   "devDependencies": {
     "serverless-jetpack": "^0.8.1",
     "serverless-offline": "^5.12.1",
     "serverless-offline-scheduler": "^0.4.0",
-    "serverless-plugin-typescript": "^1.1.9",
-    "typescript": "^3.7.5",
-    "yelp_scrapper": "^1.0.0"
+    "typescript": "^3.7.5"
   }
 }
